# brain-damage

./: .gitignore  CMakeLists.txt  README.md  config.json.example
cmake/: CMakeCache.txt  FindDPP.cmake  Makefile  cmake_install.cmake  discord-bot
src/: events.cpp  events.hpp  main.cpp  main.hpp  starboard.cpp  starboard.hpp
src/commands/: command.hpp  commands_registry.hpp  execute.cpp  keyword.cpp  keyword_file.cpp  ping.cpp  reload.cpp
src/commands/keyword/: keyword.cpp
src/commands/keyword_file/: keyword_file.cpp
src/commands/ping/: ping.cpp
src/commands/reload/: reload.cpp
src/events/: event.hpp  events_registry.hpp  message_create.cpp  reaction.cpp  ready.cpp
